--- a/Backend/app/views/layouts/application.html.erb
+++ b/Backend/app/views/layouts/application.html.erb
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
   <head>
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="CodePixar">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
     <title>Hidroponia</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +24,44 @@
   </head>
 
   <body>
+    <header class="default-header">
+      <nav class="navbar navbar-expand-lg  navbar-light">
+        <div class="container">
+              <%= link_to image_tag("logo.png", border: 0), root_path %>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li><%= link_to "Inicio", root_path %></li>
+                <li><%= link_to "Servicios", root_path %></li>
+                <li><%= link_to "Nosotros", root_path %></li>
+                <li><%= link_to "Registrese", root_path %></li>
+              </ul>
+            </div>
+        </div>
+      </nav>
+    </header>
+    
+    <!-- start banner Area -->
+    <section class="banner-area relative" id="home" data-parallax="scroll" data-image-src="header-bg.jpg">
+      <div class="overlay-bg overlay"></div>
+      <div class="container">
+        <div class="row fullscreen  d-flex align-items-center justify-content-end">
+          <div class="banner-content col-lg-7 col-md-12">
+            <h1>
+              Productos <span>Hidropónicos </span><br>
+              de alta <span>Calidad</span>
+            </h1>
+            <a href="#" class="primary-btn2 header-btn text-uppercase">Registrate</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End banner Area -->
+
+
     <%= yield %>
   </body>
 </html>
