--- a/Backend/app/views/welcome/index.html.erb
+++ b/Backend/app/views/welcome/index.html.erb
@@ -2,35 +2,38 @@
   <nav class="navbar navbar-expand-lg  navbar-light">
     <div class="container">
           <%= link_to image_tag("logo.png", border: 0), root_path %>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+        <div >
           <ul class="navbar-nav">
-            <li><%= link_to "Inicio", root_path %></li>
-            <li><%= link_to "Servicios", root_path %></li>
-            <li><%= link_to "Nosotros", root_path %></li>
-            <li><%= link_to "Iniciar sesión", new_user_path %></li>
+            <li><%= link_to "Iniciar sesión", profile_index_path %></li>
           </ul>
         </div>
     </div>
   </nav>
 </header>
 
-<!-- start banner Area -->
-<section class="banner-area relative" id="home" data-parallax="scroll" data-image-src="header-bg.jpg">
-  <div class="overlay-bg overlay"></div>
+<!-- Start project Area -->
+<section class="project-area section-gap" id="project">
   <div class="container">
-    <div class="row fullscreen  d-flex align-items-center justify-content-end">
-      <div class="banner-content col-lg-7 col-md-12">
-        <h1>
-          Productos <span>Hidropónicos </span><br>
-          de alta <span>Calidad</span>
-        </h1>
-        <%= link_to "Registrate", new_user_path, class:"primary-btn2 header-btn text-uppercase" %>
+    <div class="row d-flex justify-content-center">
+      <div class="menu-content pb-40 col-lg-8">
+        <div class="title text-center">
+          <h1>
+            Productos <span>Hidropónicos </span><br>
+            de alta <span>Calidad</span>
+          </h1>
+          <p>‘Hidroponía en casa’ es una plataforma web dedicada a la comercialización de productos hidropónicos al por mayor y detal.</p>
+          <br><br>
+          <%= link_to "Registrate", new_user_registration_path, class:"primary-btn2 header-btn text-uppercase" %>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="mt-10">
+        <div class="item">
+          <%= image_tag("header-bg.jpg", :class => "img-fluid") %>
+        </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End banner Area -->
+<!-- End project Area -->
