Se crea nueva tabla para guardar datos de inicio de sesion gracias a la gema devise
organizacion en la estructura del proyecto

--- a/Backend/app/views/welcome/index.html.erb
+++ b/Backend/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
           <%= link_to image_tag("logo.png", border: 0), root_path %>
         <div >
           <ul class="navbar-nav">
-            <li><%= link_to "Iniciar sesión", profile_index_path %></li>
+            <li><%= link_to "Iniciar sesión", profiles_path %></li>
           </ul>
         </div>
     </div>
