--- a/Backend/app/views/products/_form.html.erb
+++ b/Backend/app/views/products/_form.html.erb
@@ -1,12 +1,9 @@
-
-<%= simple_form_for(@product) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<%= simple_form_for @product, validate: true do |f| %>
+<%= f.input :id_category, label: 'Categoria' do %>
+  <%= f.select :id_category, Category.all.map { |r| [r.name, r.id_category] } %>
+<% end %>
+  <%= f.input :name, label: 'Nombre del producto', required: true %>
+  <%= f.input :description, label: 'Descripción'%>
+  <%= f.input :price, label: 'Precio', required: true %>
+  <%= f.button :submit, "Guardar" %>
 <% end %>
