--- a/Backend/app/views/profiles/show.html.erb
+++ b/Backend/app/views/profiles/show.html.erb
@@ -1,1 +1,4 @@
-<h2><%= @profile.first_name %></h2>
+<p id="notice"><%= notice %></p>
+
+<%= link_to 'Edit', edit_profile_path(@profile) %> |
+<%= link_to 'Back', profiles_path %>
